--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -15,6 +15,6 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="uid_label">"미디어"</string>
-    <string name="app_label">"Media Storage"</string>
+    <string name="uid_label">"Medios"</string>
+    <string name="app_label">"Almacenamiento de medios"</string>
 </resources>
