--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -16,5 +16,5 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="uid_label">"Μέσα"</string>
-    <string name="app_label">"Χώρος αποθήκευσης μέσων"</string>
+    <string name="app_label">"Χώρος αποθ.μέσων"</string>
 </resources>
