MediaProvider: Support drm.
Change-Id: Iacf0d0e87bde09fd23d3f7a44e7f4c4927c77024

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,4 +26,7 @@
 
     <!-- Description line for music artists in the search/suggestion results -->
     <string name="artist_label">Artist</string>
+
+    <!-- BORQS DRM CHANGE -->
+    <string name="drm_no_share">DRM file cannot be shared</string>
 </resources>
